ajuste na documentacao

--- a/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/deep-learning/mvp-sprint-ii-deep-learnig-final.ipynb
@@ -18,22 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notebook modelo Clássico"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#-----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Notebook modelo Deep Learning - Classificador de imagens do dataset CIFAR10"
    ]
   },
@@ -893,7 +877,7 @@
    "source": [
     "**Configuração dos Modelos**\n",
     "\n",
-    "Foram configurados 4 modelos candidatos para o treinamento da rede. Dentre os quatro, o que tiver a melhor acurácia seria o escolhido em definitivo para a o treinamento da rede."
+    "Foram configurados 4 modelos candidatos para o treinamento da rede. O modelo que tiver a melhor acurácia será o escolhido para o treinamento da rede."
    ]
   },
   {
@@ -903,10 +887,10 @@
     "**Modelo 1**\n",
     "\n",
     "Este modelo apresenta uma construção com 4 camadas convolucionais. Sendo uma com 32 filtros, outra com 64 e duas com 128 filtros. Essas camadas tem um kernel de tamanho 3x3 e usam a ativição 'ReLU'. \n",
-    "Temos também camadas max-pooling com bloco 2×2.\n",
+    "O modelo também tem camadas max-pooling com bloco 2×2.\n",
     "A primeira camada convolucional recebe uma imagem 32x32.\n",
     "\n",
-    "Na sequência temos uma camada 'Flatten', seguida de duas camadas densas. Na última camada densa usamos a função de ativação 'Softmax' utilizada na classificação do conjunto das 10 imagens. \n",
+    "Na sequência temos uma camada 'Flatten', seguida de duas camadas densas. Na última camada densa é usada a função de ativação 'Softmax' para a classificação do conjunto de imagens de acordo com a sua classe. \n",
     "\n",
     "    model1 = models.Sequential()\n",
     "\n",
@@ -1067,7 +1051,7 @@
    "source": [
     "**Modelo 2**\n",
     "\n",
-    "O Modelo 2 é baseado na arquitetura do Modelo 1. Nele acrescentamos algumas camadas de 'Dropout' com um percentual de 25%. O objetivo é reduzir o overfitting no treinamento.\n",
+    "O Modelo 2 é baseado na arquitetura do Modelo 1. Nele foram acrescentadas algumas camadas de 'Dropout' com um percentual de 25%. O objetivo dessas camadas é reduzir o overfitting no treinamento.\n",
     "\n",
     "    model2 = models.Sequential()\n",
     "\n",
@@ -1240,7 +1224,7 @@
    "source": [
     "**Modelo 3**\n",
     "\n",
-    "No Modelo 3 partimos da configuração do Modelo 2 e acrescentamos algumas camadas 'BatchNormalization'. A normalização da saída da camada vai aumentar a velocidade do treinamento e melhorar a performance do modelo.\n",
+    "No Modelo 3 parte-se da configuração do Modelo 2 e são acrescentadas algumas camadas 'BatchNormalization'. A normalização da saída da camada vai aumentar a velocidade do treinamento e melhorar a performance do modelo.\n",
     "\n",
     "    model3 = models.Sequential()\n",
     "\n",
@@ -1429,7 +1413,7 @@
    "source": [
     "**Modelo 4**\n",
     "\n",
-    "No Modelo 4 retiramos as camadas de 'Dropout' do Modelo 3 e mantivemos o restante de sua configuração.\n",
+    "No Modelo 4 são retiradas as camadas de 'Dropout' do Modelo 3 e foi mantido o restante de sua configuração.\n",
     "\n",
     "    model4 = models.Sequential()\n",
     "\n",
