--- a/mvp-sprint-ii-machine-learning-analytics/modelo-classico/mvp-sprint-ii-modelo-classico-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/modelo-classico/mvp-sprint-ii-modelo-classico-final.ipynb
@@ -439,6 +439,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Seleção de atributos**\n",
+    "\n",
+    "É utilizada a técnica de 'Seleção Univariada' para selecionar as variáveis que tenham maior relação com a variável de saída (target).\n",
+    "\n",
+    "A rotina seleciona o melhor K e daí seleciona os atributos que correspondam a esse número."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -546,6 +557,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Criação de Pipelines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define os folds para a validação cruzada. Serão utilizadas 10 partições em sua configuração."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -554,6 +579,13 @@
     "# Criando os folds para a validação cruzada\n",
     "num_splits = 10\n",
     "kfold = KFold(n_splits=num_splits, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configuração e avaliação dos modelos."
    ]
   },
   {
@@ -650,6 +682,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Criando os elementos do Pipeline. Definição de algoritmos e transformações que serão utilizadas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -665,6 +704,13 @@
     "# Transformações que serão utilizadas\n",
     "standard_scaler = ('StandardScaler', StandardScaler())\n",
     "min_max_scaler = ('MinMaxScaler', MinMaxScaler())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configuração e avaliação dos Pipelines."
    ]
   },
   {
@@ -741,6 +787,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Otimização de Hiperparâmetros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Baseado no resultado da acurácia da execução dos Pipelines, foram selecionados os algoritmos de Regressão Logistica, Random Forest e Gradient Boosting, para a aplicação de hiperparâmetros a fim de encontrar o melhor modelo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -765,18 +825,19 @@
     "pipelines_reg_log.append(('LR-padr', Pipeline(steps=[standard_scaler, reg_log])))\n",
     "pipelines_reg_log.append(('LR-norm', Pipeline(steps=[min_max_scaler, reg_log])))\n",
     "\n",
-    "'''\n",
     "param_grid= {\n",
     "    'LR__penalty' : ['l1', 'l2', 'elasticnet', 'none'],\n",
     "    'LR__C' : np.logspace(-4, 4, 20),\n",
     "    'LR__solver' : ['lbfgs','newton-cg','liblinear','sag','saga'],\n",
     "    'LR__max_iter' : [100, 1000,2500, 5000]\n",
     "}\n",
+    "\n",
     "'''\n",
     "param_grid= {\n",
     "    'LR__penalty' : ['l1', 'l2', 'elasticnet', 'none'],\n",
     "    'LR__solver' : ['lbfgs','newton-cg','liblinear','sag','saga'],\n",
     "}\n",
+    "'''\n",
     "\n",
     "# prepara e executa o GridSearchCV\n",
     "for name, model in pipelines_reg_log:\n",
@@ -866,6 +927,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Execução do modelo com a melhor configuração de hiperparâmetros e dados de teste."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -894,6 +962,20 @@
     "rescaledTextX = scaler.transform(X_test)\n",
     "predictions = model.predict(rescaledTextX)\n",
     "print(accuracy_score(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Teste do modelo com todo o dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preparação do modelo."
    ]
   },
   {
@@ -926,6 +1008,13 @@
     "scaler = StandardScaler().fit(X)\n",
     "rescaledX = scaler.transform(X)\n",
     "model.fit(rescaledX, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teste do modelo com classe de saída não informada."
    ]
   },
   {
@@ -973,6 +1062,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predição com os dados informados."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -989,6 +1085,13 @@
     "# predição de classes dos dados de entrada\n",
     "saidas = model.predict(rescaledEntradaX)\n",
     "print(saidas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sumário"
    ]
   }
  ],
