--- a/mvp-sprint-ii-machine-learning-analytics/modelo-classico/mvp-sprint-ii-modelo-classico-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/modelo-classico/mvp-sprint-ii-modelo-classico-final.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,10 +81,7 @@
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import f_classif\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import f1_score\n",
-    "\n",
-    "# from sklearn.model_selection import StratifiedKFold\n",
-    "# from sklearn.feature_selection import RFE"
+    "from sklearn.metrics import f1_score"
    ]
   },
   {
@@ -96,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +359,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -802,16 +799,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sem tratamento de missings: LR-orig - Melhor: 0.762588 usando {'LR__penalty': 'none', 'LR__solver': 'saga'}\n",
-      "Sem tratamento de missings: LR-padr - Melhor: 0.763556 usando {'LR__penalty': 'l1', 'LR__solver': 'saga'}\n",
-      "Sem tratamento de missings: LR-norm - Melhor: 0.762582 usando {'LR__penalty': 'none', 'LR__solver': 'lbfgs'}\n"
+      "Sem tratamento de missings: LR-orig - Melhor: 0.766139 usando {'LR__C': 4.281332398719396, 'LR__max_iter': 100, 'LR__penalty': 'l2', 'LR__solver': 'lbfgs'}\n",
+      "Sem tratamento de missings: LR-padr - Melhor: 0.763232 usando {'LR__C': 0.615848211066026, 'LR__max_iter': 100, 'LR__penalty': 'l1', 'LR__solver': 'saga'}\n",
+      "Sem tratamento de missings: LR-norm - Melhor: 0.762906 usando {'LR__C': 0.0001, 'LR__max_iter': 100, 'LR__penalty': 'none', 'LR__solver': 'lbfgs'}\n"
      ]
     }
    ],
@@ -832,13 +829,6 @@
     "    'LR__max_iter' : [100, 1000,2500, 5000]\n",
     "}\n",
     "\n",
-    "'''\n",
-    "param_grid= {\n",
-    "    'LR__penalty' : ['l1', 'l2', 'elasticnet', 'none'],\n",
-    "    'LR__solver' : ['lbfgs','newton-cg','liblinear','sag','saga'],\n",
-    "}\n",
-    "'''\n",
-    "\n",
     "# prepara e executa o GridSearchCV\n",
     "for name, model in pipelines_reg_log:\n",
     "    grid = GridSearchCV(estimator=model, param_grid=param_grid, cv=kfold, scoring='accuracy')\n",
@@ -850,16 +840,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sem tratamento de missings: RF-orig - Melhor: 0.759028 usando {'RF__max_features': 3, 'RF__n_estimators': 200}\n",
-      "Sem tratamento de missings: RF-padr - Melhor: 0.759997 usando {'RF__max_features': 3, 'RF__n_estimators': 200}\n",
-      "Sem tratamento de missings: RF-norm - Melhor: 0.761615 usando {'RF__max_features': 1, 'RF__n_estimators': 100}\n"
+      "Sem tratamento de missings: RF-orig - Melhor: 0.760644 usando {'RF__max_features': 3, 'RF__n_estimators': 200}\n",
+      "Sem tratamento de missings: RF-padr - Melhor: 0.760318 usando {'RF__max_features': 3, 'RF__n_estimators': 200}\n",
+      "Sem tratamento de missings: RF-norm - Melhor: 0.759999 usando {'RF__max_features': 1, 'RF__n_estimators': 200}\n"
      ]
     }
    ],
@@ -889,16 +879,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sem tratamento de missings: GB-orig - Melhor: 0.763869 usando {'GB__max_features': 3, 'GB__n_estimators': 200}\n",
-      "Sem tratamento de missings: GB-padr - Melhor: 0.765165 usando {'GB__max_features': 3, 'GB__n_estimators': 100}\n",
-      "Sem tratamento de missings: GB-norm - Melhor: 0.767748 usando {'GB__max_features': 3, 'GB__n_estimators': 200}\n"
+      "Sem tratamento de missings: GB-orig - Melhor: 0.763865 usando {'GB__max_features': 3, 'GB__n_estimators': 100}\n",
+      "Sem tratamento de missings: GB-padr - Melhor: 0.762258 usando {'GB__max_features': 1, 'GB__n_estimators': 200}\n",
+      "Sem tratamento de missings: GB-norm - Melhor: 0.765804 usando {'GB__max_features': 1, 'GB__n_estimators': 200}\n"
      ]
     }
    ],
@@ -935,14 +925,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7650602409638554\n"
+      "0.7703313253012049\n"
      ]
     }
    ],
@@ -953,8 +943,8 @@
     "scaler = StandardScaler().fit(X_train)\n",
     "rescaledX = scaler.transform(X_train)\n",
     "\n",
-    "gradient_boosting = ('GB', GradientBoostingClassifier(n_estimators=200, max_features=1))\n",
-    "model = Pipeline([min_max_scaler, gradient_boosting])\n",
+    "reg_log = ('LR', LogisticRegression(max_iter=100, C=4.281332398719396, penalty='l2', solver='lbfgs'))\n",
+    "model = Pipeline([reg_log])\n",
     "\n",
     "model.fit(rescaledX, y_train)\n",
     "\n",
@@ -980,25 +970,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;MinMaxScaler&#x27;, MinMaxScaler()),\n",
-       "                (&#x27;GB&#x27;,\n",
-       "                 GradientBoostingClassifier(max_features=1, n_estimators=200))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;MinMaxScaler&#x27;, MinMaxScaler()),\n",
-       "                (&#x27;GB&#x27;,\n",
-       "                 GradientBoostingClassifier(max_features=1, n_estimators=200))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MinMaxScaler</label><div class=\"sk-toggleable__content\"><pre>MinMaxScaler()</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GradientBoostingClassifier</label><div class=\"sk-toggleable__content\"><pre>GradientBoostingClassifier(max_features=1, n_estimators=200)</pre></div></div></div></div></div></div></div>"
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;LR&#x27;, LogisticRegression(C=4.281332398719396))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;LR&#x27;, LogisticRegression(C=4.281332398719396))])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(C=4.281332398719396)</pre></div></div></div></div></div></div></div>"
       ],
       "text/plain": [
-       "Pipeline(steps=[('MinMaxScaler', MinMaxScaler()),\n",
-       "                ('GB',\n",
-       "                 GradientBoostingClassifier(max_features=1, n_estimators=200))])"
+       "Pipeline(steps=[('LR', LogisticRegression(C=4.281332398719396))])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1075,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sumário"
+    "### Sumário\n",
+    "\n",
+    "Na preparação do modelo para uso na classificação do dataset, foi feita uma operação de seleção de atributos. Do dataset inicial de 36 atributos, a operação de seleção reduziu esse conjunto para 13 atributos, essa redução permitiu um desempenho melhor na execução do algoritmo de classificação. Na busca do melhor modelo, foi utilizada cross-validation e a criação de pipelines de modelos. A otimização de hiperparâmetros implementada evidenciou que o algoritmo de Regressão Logistica apresentou o melhor resultado considerando a acurácia. Os hiperparâmetros levantados foram ('LR__C': 4.281332398719396, 'LR__max_iter': 100, 'LR__penalty': 'l2', 'LR__solver': 'lbfgs'). Com eles a acurácia obtida foi de 0.7703313253012049. "
    ]
   }
  ],
