revisao versao final

--- a/mvp-sprint-ii-machine-learning-analytics/mvp-sprint-ii-final.ipynb
+++ b/mvp-sprint-ii-machine-learning-analytics/mvp-sprint-ii-final.ipynb
@@ -553,95 +553,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Teste do modelo com todo o dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Preparação do modelo."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preparação do modelo com TODO o dataset\n",
-    "scaler = StandardScaler().fit(X)\n",
-    "rescaledX = scaler.transform(X)\n",
-    "model.fit(rescaledX, y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Teste do modelo com classe de saída não informada."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# novos dados - não sabemos a classe\n",
-    "data = {\n",
-    "\"Application mode\": [17],\n",
-    "\"Debtor\": [0],\n",
-    "\"Tuition fees up to date\": [1],\n",
-    "\"Gender\": [1],\n",
-    "\"Scholarship holder\": [0],\n",
-    "\"Age at enrollment\": [20],\n",
-    "\"Curricular units 1st sem (enrolled)\": [0],\n",
-    "\"Curricular units 1st sem (evaluations)\": [0],\n",
-    "\"Curricular units 1st sem (approved)\": [0],\n",
-    "\"Curricular units 1st sem (grade)\": [0.0],\n",
-    "\"Curricular units 2nd sem (enrolled)\": [0],\n",
-    "\"Curricular units 2nd sem (evaluations)\": [0],\n",
-    "\"Curricular units 2nd sem (approved)\": [0],\n",
-    "\"Curricular units 2nd sem (grade)\": [0.0],\n",
-    "}\n",
-    "\n",
-    "atributos = [\"Application mode\",\"Debtor\",\"Tuition fees up to date\",\"Gender\",\"Scholarship holder\",\"Age at enrollment\",\"Curricular units 1st sem (enrolled)\",\"Curricular units 1st sem (approved)\",\"Curricular units 1st sem (grade)\",\"Curricular units 2nd sem (enrolled)\",\"Curricular units 2nd sem (evaluations)\",\"Curricular units 2nd sem (approved)\",\"Curricular units 2nd sem (grade)\"]\n",
-    "entrada = pd.DataFrame(data, columns=atributos)\n",
-    "\n",
-    "array_entrada = entrada.values\n",
-    "X_entrada = array_entrada[:,0:13].astype(float)\n",
-    "\n",
-    "# padronização nos dados de entrada usando o scaler utilizado em X\n",
-    "rescaledEntradaX = scaler.transform(X_entrada)\n",
-    "print(rescaledEntradaX)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Predição com os dados informados."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# predição de classes dos dados de entrada\n",
-    "saidas = model.predict(rescaledEntradaX)\n",
-    "print(saidas)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Sumário\n",
     "\n",
-    "Na preparação do modelo para uso na classificação do dataset, foi feita uma operação de seleção de atributos. Do dataset inicial de 36 atributos, a operação de seleção reduziu esse conjunto para 13 atributos, essa redução permitiu um desempenho melhor na execução do algoritmo de classificação. Na busca do melhor modelo, foi utilizada cross-validation e a criação de pipelines de modelos. A otimização de hiperparâmetros implementada evidenciou que o algoritmo de Regressão Logistica apresentou o melhor resultado considerando a acurácia. Os hiperparâmetros levantados foram ('LR__C': 4.281332398719396, 'LR__max_iter': 100, 'LR__penalty': 'l2', 'LR__solver': 'lbfgs'). Com eles a acurácia obtida foi de 0.7703313253012049. "
+    "Na preparação do modelo para uso na classificação do dataset, foi feita uma operação de seleção de atributos. A operação de redução no número de atríbutos permitiu um desempenho melhor na execução do algoritmo de classificação. Na busca do melhor modelo, foi utilizada cross-validation e a criação de pipelines de modelos. A otimização de hiperparâmetros implementada evidenciou que o algoritmo de Regressão Logistica apresentou o melhor resultado considerando a acurácia obtida na execução do modelo."
    ]
   },
   {
